--- a/html/directions.html
+++ b/html/directions.html
@@ -23,7 +23,7 @@
   <!-- Breadcrumb -->
   <div class="breadcrumb-wrap">
       <ul class="breadcrumb">
-        <a class="home" href="/index.html">
+        <a class="home" href="/seoulchildrensgrandpark_Portfolio/index.html">
           <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_04_ticket_info/home.svg" alt="">
         </a>
         <li>
@@ -82,7 +82,7 @@
               <div class="traffic-item">
                 <div class="traffic-title">
                   <h3>버스 이용시</h3>
-                  <img src="/images/subpage_03_directions/traffic_icon_01.svg" alt="교통아이콘1">
+                  <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_03_directions/traffic_icon_01.svg" alt="교통아이콘1">
                 </div>
                 <div class="traffic-info-wrap">
                   <div class="traffic-info">
@@ -115,7 +115,7 @@
               <div class="traffic-item">
                 <div class="traffic-title">
                   <h3>지하철 이용시</h3>
-                  <img src="/images/subpage_03_directions/traffic_icon_02.svg" alt="교통아이콘2">
+                  <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_03_directions/traffic_icon_02.svg" alt="교통아이콘2">
                 </div>
                 <div class="traffic-info-wrap">
                   <div class="traffic-info">
@@ -162,7 +162,7 @@
               <div class="traffic-item">
                 <div class="traffic-title">
                   <h3>자동차 이용시</h3>
-                  <img src="/images/subpage_03_directions/traffic_icon_03.svg" alt="교통아이콘3">
+                  <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_03_directions/traffic_icon_03.svg" alt="교통아이콘3">
                 </div>
                 <div class="traffic-info-wrap">
                   <div class="traffic-info">
@@ -373,7 +373,7 @@
         <div class="login-head">
           <h3 class="login-title">로그인</h3>
           <div class="close" id="login-modal-close-btn">
-            <img src="/images/variables/close-icon-black.svg" alt="">
+            <img src="/seoulchildrensgrandpark_Portfolio/images/variables/close-icon-black.svg" alt="">
           </div>
         </div>
       <div class="login-switch-tap">
@@ -392,7 +392,7 @@
           <input type="text" placeholder="아이디를 입력해주세요." class="id-input-area">
           <input type="password" placeholder="비밀번호를 입력해주세요." class="password-input-area"> 
         </div>
-        <img src="/images/variables/eye-open.svg" alt="" class="password-eye" onclick="togglePassword()"> <!-- 클릭 시 togglePassword 호출 -->
+        <img src="/seoulchildrensgrandpark_Portfolio/images/variables/eye-open.svg" alt="" class="password-eye" onclick="togglePassword()"> <!-- 클릭 시 togglePassword 호출 -->
         <div class="remember-btn">
           <input type="checkbox" name="id-remember" id="id-remember">
           아이디 기억하기
@@ -415,15 +415,15 @@
         </div>
         <div class="sns-login-items">
           <div class="sns-login-item">
-            <img src="/images/variables/sns-login-01.png" alt="">
+            <img src="/seoulchildrensgrandpark_Portfolio/images/variables/sns-login-01.png" alt="">
             <h4>페이스북 계정으로 로그인</h4>
           </div>
           <div class="sns-login-item">
-            <img src="/images/variables/sns-login-02.png" alt="">
+            <img src="/seoulchildrensgrandpark_Portfolio/images/variables/sns-login-02.png" alt="">
             <h4>카카오 계정으로 로그인</h4>
           </div>
           <div class="sns-login-item">
-            <img src="/images/variables/sns-login-03.png" alt="">
+            <img src="/seoulchildrensgrandpark_Portfolio/images/variables/sns-login-03.png" alt="">
             <h4>네이버 계정으로 로그인</h4>
           </div>
         </div>
