--- a/html/ticket-cart.html
+++ b/html/ticket-cart.html
@@ -25,7 +25,7 @@
     <!-- breadcrumb -->
     <div class="breadcrumb-wrap">
       <ul class="breadcrumb">
-        <a class="home" href="/index.html">
+        <a class="home" href="/seoulchildrensgrandpark_Portfolio/index.html">
           <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_04_ticket_info/home.svg" alt="home-icon">
         </a>
         <li>
@@ -189,7 +189,7 @@
             <h4>카카오 계정으로 로그인</h4>
           </div>
           <div class="sns-login-item">
-            <img src="/seoulchildrensgrandpark_Portfolio//images/variables/sns-login-03.png" alt="sns-login">
+            <img src="/seoulchildrensgrandpark_Portfolio/images/variables/sns-login-03.png" alt="sns-login">
             <h4>네이버 계정으로 로그인</h4>
           </div>
         </div>
