--- a/html/ticket-rsv.html
+++ b/html/ticket-rsv.html
@@ -25,7 +25,7 @@
     <!-- breadcrumb -->
     <div class="breadcrumb-wrap">
       <ul class="breadcrumb">
-        <a class="home" href="/index.html">
+        <a class="home" href="/seoulchildrensgrandpark_Portfolio/index.html">
           <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_04_ticket_info/home.svg" alt="home-icon">
         </a>
         <li>
