--- a/html/serviceSuspension.html
+++ b/html/serviceSuspension.html
@@ -20,14 +20,14 @@
 
   <!-- Banner -->
   <div class="serviceSuspension-banner">
-    <img src="/seoulchildrensgrandpark_Portfolio//images/subpage_02_SERVICESUSPENSION/BannerDesign-02.jpg" alt="운휴안내 배너">
+    <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_02_SERVICESUSPENSION/BannerDesign-02.jpg" alt="운휴안내 배너">
   </div>  
   <!-- MainSection -->
   <div class="serviceSuspension-mainsection">
       <!-- Breadcrumb -->
   <div class="breadcrumb-wrap">
     <ul class="breadcrumb">
-      <a class="home" href="/index.html">
+      <a class="home" href="/seoulchildrensgrandpark_Portfolio/index.html">
         <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_04_ticket_info/home.svg" alt="홈 아이콘">
       </a>
       <li>
@@ -102,9 +102,9 @@
       <div class="weather-box left">
         <div class="left-top">
           <div class="left-top-left">
-            <img src="/seoulchildrensgrandpark_Portfolio//images/subpage_02_SERVICESUSPENSION/location.svg" alt="위치 아이콘" class="location-mark">
+            <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_02_SERVICESUSPENSION/location.svg" alt="위치 아이콘" class="location-mark">
             <h3>서울어린이대공원 
-              <img src="/seoulchildrensgrandpark_Portfolio//images/subpage_02_SERVICESUSPENSION/arrow-down.svg" alt="아래 화살표 아이콘">
+              <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_02_SERVICESUSPENSION/arrow-down.svg" alt="아래 화살표 아이콘">
             </h3>
           </div>
           <div class="left-top-right">
@@ -122,11 +122,11 @@
               </div>
               <div class="main-weather-subinfo">
                 <div class="subinfo-wind">
-                  <img src="/seoulchildrensgrandpark_Portfolio//images/subpage_02_SERVICESUSPENSION/windspeed.svg" alt="풍속">
+                  <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_02_SERVICESUSPENSION/windspeed.svg" alt="풍속">
                   <h5>0.0m/s</h5> <!-- 풍속 -->
                 </div>
                 <div class="subinfo-rain">
-                  <img src="/seoulchildrensgrandpark_Portfolio//images/subpage_02_SERVICESUSPENSION/precipitation.svg" alt="강수량">
+                  <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_02_SERVICESUSPENSION/precipitation.svg" alt="강수량">
                   <h5>0.0mm</h5> <!-- 강수량 -->
                 </div>
             </div>
@@ -280,7 +280,7 @@
       <div class="login-head">
         <h3 class="login-title">로그인</h3>
         <div class="close" id="login-modal-close-btn">
-          <img src="/seoulchildrensgrandpark_Portfolio//images/variables/close-icon-black.svg" alt="닫기">
+          <img src="/seoulchildrensgrandpark_Portfolio/images/variables/close-icon-black.svg" alt="닫기">
         </div>
       </div>
     <div class="login-switch-tap">
@@ -299,7 +299,7 @@
         <input type="text" placeholder="아이디를 입력해주세요." class="id-input-area">
         <input type="password" placeholder="비밀번호를 입력해주세요." class="password-input-area"> 
       </div>
-      <img src="/seoulchildrensgrandpark_Portfolio//images/variables/eye-open.svg" alt="눈 아이콘" class="password-eye" onclick="togglePassword()"> <!-- 클릭 시 togglePassword 호출 -->
+      <img src="/seoulchildrensgrandpark_Portfolio/images/variables/eye-open.svg" alt="눈 아이콘" class="password-eye" onclick="togglePassword()"> <!-- 클릭 시 togglePassword 호출 -->
       <div class="remember-btn">
         <input type="checkbox" name="id-remember" id="id-remember">
         아이디 기억하기
@@ -322,15 +322,15 @@
       </div>
       <div class="sns-login-items">
         <div class="sns-login-item">
-          <img src="/seoulchildrensgrandpark_Portfolio//images/variables/sns-login-01.png" alt="페이스북 아이콘">
+          <img src="/seoulchildrensgrandpark_Portfolio/images/variables/sns-login-01.png" alt="페이스북 아이콘">
           <h4>페이스북 계정으로 로그인</h4>
         </div>
         <div class="sns-login-item">
-          <img src="/seoulchildrensgrandpark_Portfolio//images/variables/sns-login-02.png" alt="카카오 아이콘">
+          <img src="/seoulchildrensgrandpark_Portfolio/images/variables/sns-login-02.png" alt="카카오 아이콘">
           <h4>카카오 계정으로 로그인</h4>
         </div>
         <div class="sns-login-item">
-          <img src="/seoulchildrensgrandpark_Portfolio//images/variables/sns-login-03.png" alt="네이버 아이콘">
+          <img src="/seoulchildrensgrandpark_Portfolio/images/variables/sns-login-03.png" alt="네이버 아이콘">
           <h4>네이버 계정으로 로그인</h4>
         </div>
       </div>
@@ -340,8 +340,8 @@
     </div>
   </div>
   </div>
-  <script src="/script/variables.js"></script>
-  <script src="/script/footer-white.js"></script>
-  <script src="/script/custom-serviceSuspension.js"></script>
+  <script src="/seoulchildrensgrandpark_Portfolio/script/variables.js"></script>
+  <script src="/seoulchildrensgrandpark_Portfolio/script/footer-white.js"></script>
+  <script src="/seoulchildrensgrandpark_Portfolio/script/custom-serviceSuspension.js"></script>
 </body>
 </html>
