--- a/html/directions.html
+++ b/html/directions.html
@@ -432,7 +432,7 @@
       <div class="modal-back">
       </div>
   </div> 
-  <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=	7dd479c56027a1e6a868f1b7c49a8e4f"></script>
+  <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=a11463a6deaea9fabfd826e96f18bb05"></script>
   <script src="/seoulchildrensgrandpark_Portfolio/script/footer-white.js"></script>
   <script src="/seoulchildrensgrandpark_Portfolio/script/sub-custom.js"></script>
   <!-- <script src="/seoulchildrensgrandpark_Portfolio/script/custom-main.js"></script> -->
