--- a/html/directions.html
+++ b/html/directions.html
@@ -109,7 +109,6 @@
                       130번,  302번, 303번, 320번, 370번, 721번
                     </div>
                   </div>
-                 
                 </div>
               </div>
               <div class="traffic-item">
@@ -214,7 +213,6 @@
                       청담대로 → 청담대교 직진 → 건국대학교에서 직진 → 어린이대공원정문
                     </div>
                   </div>
-               
                 </div>
               </div>
             </div>
@@ -242,7 +240,7 @@
                 </div>
                 <div class="right-info">
                   <div class="info-main">
-                   <div class="car-items">
+                    <div class="car-items">
                     <div class="car">
                       <h3>승용차</h3>
                       <p>150원</p>
@@ -255,7 +253,7 @@
                       <h3>대형차</h3>
                       <p>450원</p>
                     </div>
-                   </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -280,10 +278,11 @@
                   </div>
                   <div class="table-row">
                     <div class="table-left">
-                      경차 · 저공해자동차                    </div>
+                      경차 · 저공해자동차
+                    </div>
                     <div class="table-right">
                       50% 감면                   
-                     </div>
+                    </div>
                   </div>
                   <div class="table-row">
                     <div class="table-left">
@@ -295,7 +294,8 @@
                   </div>
                   <div class="table-row">
                     <div class="table-left">
-                      5.18 민주유공자 차량                      </div>
+                      5.18 민주유공자 차량                      
+                    </div>
                       <div class="table-right">
                         50% 감면                  
                       </div>
