--- a/html/ticket-info.html
+++ b/html/ticket-info.html
@@ -49,11 +49,11 @@
           </ul>
         </li>
         <li>
-          <a href="/html/ticket-info.html">티켓 안내</a>
+          <a href="/seoulchildrensgrandpark_Portfolio/html/ticket-info.html">티켓 안내</a>
           <ul class="depth">
-            <li><a href="/html/ticket-info.html">티켓 안내</a></li>
-            <li><a href="/html/ticket-rsv.html">티켓 구매</a></li>
-            <li><a href="/html/ticket-cart.html">장바구니</a></li>
+            <li><a href="/seoulchildrensgrandpark_Portfolio/html/ticket-info.html">티켓 안내</a></li>
+            <li><a href="/seoulchildrensgrandpark_Portfolio/html/ticket-rsv.html">티켓 구매</a></li>
+            <li><a href="/seoulchildrensgrandpark_Portfolio/html/ticket-cart.html">장바구니</a></li>
           </ul>
         </li>
       </ul>
