--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
           <div class="sns-slider-wrap">
             <div class="sns-slide">
               <div class="sns-slide-item">
-                <a href="#none"><img src=/seoulchildrensgrandpark_Portfolio/images/mainpage/section_04/sns-image-01.jpg" alt="월간대공원 문화 페스티벌 기간 : 2024.11.6.[수]–11.23.[토]"></a>
+                <a href="#none"><img src="/seoulchildrensgrandpark_Portfolio/images/mainpage/section_04/sns-image-01.jpg" alt="월간대공원 문화 페스티벌 기간 : 2024.11.6.[수]–11.23.[토]"></a>
               </div>
               <div class="sns-slide-item">
                 <a href="#none"><img src="/seoulchildrensgrandpark_Portfolio/images/mainpage/section_04/sns-image-02.jpg" alt="서울어린이대공원 별자리탐험대 일시: 2024.11.14"></a>
