--- a/html/ticket-info.html
+++ b/html/ticket-info.html
@@ -113,7 +113,7 @@
           </div>
         </div>
       </div>
-      <button onclick="location.href='/html/ticket-rsv.html'">구매하기</button>
+      <button onclick="location.href='/seoulchildrensgrandpark_Portfolio/html/ticket-rsv.html'">구매하기</button>
       <div class="ticket-info-icons">
         <div class="icon">
           <img src="/seoulchildrensgrandpark_Portfolio/images/subpage_04_ticket_info/subpage_04-01.png" alt="티켓 구매">
