--- a/html/directions.html
+++ b/html/directions.html
@@ -432,6 +432,7 @@
       <div class="modal-back">
       </div>
   </div> 
+  <script src="https://t1.daumcdn.net/mapjsapi/js/main/4.4.19/kakao.js" async></script>
   <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=a45d24dc2c2bedf84475574a6c6b35f2"></script>
   <script src="/seoulchildrensgrandpark_Portfolio/script/footer-white.js"></script>
   <script src="/seoulchildrensgrandpark_Portfolio/script/sub-custom.js"></script>
