--- a/html/directions.html
+++ b/html/directions.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/seoulchildrensgrandpark_Portfolio/css/style.css">
   <link rel="stylesheet" href="/seoulchildrensgrandpark_Portfolio/css/responsive-tablet.css">
   <link rel="stylesheet" href="/seoulchildrensgrandpark_Portfolio/css/responsive-mobile.css">
+  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=a7mox6urd5"></script>
 </head>
 <body>
   <div class="container-body">
@@ -432,7 +433,6 @@
       <div class="modal-back">
       </div>
   </div> 
-  <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=a7mox6urd5"></script>
 
   <script src="/seoulchildrensgrandpark_Portfolio/script/footer-white.js"></script>
   <script src="/seoulchildrensgrandpark_Portfolio/script/sub-custom.js"></script>
