--- a/html/directions.html
+++ b/html/directions.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="/seoulchildrensgrandpark_Portfolio/css/style.css">
   <link rel="stylesheet" href="/seoulchildrensgrandpark_Portfolio/css/responsive-tablet.css">
   <link rel="stylesheet" href="/seoulchildrensgrandpark_Portfolio/css/responsive-mobile.css">
-  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=a7mox6urd5"></script>
 </head>
 <body>
   <div class="container-body">
@@ -433,7 +432,7 @@
       <div class="modal-back">
       </div>
   </div> 
-
+  <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=dfcff092cfd0cf43d54cfed1bd056bb5"></script>
   <script src="/seoulchildrensgrandpark_Portfolio/script/footer-white.js"></script>
   <script src="/seoulchildrensgrandpark_Portfolio/script/sub-custom.js"></script>
   <!-- <script src="/seoulchildrensgrandpark_Portfolio/script/custom-main.js"></script> -->
