--- a/html/directions.html
+++ b/html/directions.html
@@ -52,7 +52,7 @@
     <div class="directions-inner">
       <div class="directions-top">
         <h1>서울어린이대공원</h1>
-        <div id="map"></div>
+        <div id="map" style="width:100%;height:620px;"></div>
         <div class="text">
           <p class="place">서울어린이대공원</p>
           <div class="location">
@@ -505,7 +505,7 @@
     
   </script>
   <script src="/seoulchildrensgrandpark_Portfolio/script/footer-white.js"></script>
-  <script src="/seoulchildrensgrandpark_Portfolio/script/custom-sub.js"></script>
+  <script src="/seoulchildrensgrandpark_Portfolio/script/sub-custom.js"></script>
   <!-- <script src="/seoulchildrensgrandpark_Portfolio/script/custom-main.js"></script> -->
   <script src="/seoulchildrensgrandpark_Portfolio/script/variables.js"></script>
   <script src="/seoulchildrensgrandpark_Portfolio/script/direction-bottom.js"></script>
